<resources>
    <string name="app_name">WAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash">splash</string>
    <string name="login">登录</string>
    <string name="register">register</string>
    <string name="title_main">main</string>
    <string name="title_mine">我的</string>
    <string name="web_detail">web detail</string>
    <string name="system_article_feed">system article feed</string>
    <string name="search">search</string>
    <string name="share">share</string>
    <string name="collect">collect</string>
    <string name="account">账号</string>
    <string name="check_in">签到</string>
    <string name="logout">退出登录</string>
    <string name="integral_rule">积分规则</string>
    <string name="about">关于</string>
    <string name="wan_page">玩Android</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="wanandroid">玩Android</string>

    <string name="retry">重试</string>

</resources>