<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.almin.wandroid.ui.module.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tab_home" />

    <fragment
        android:id="@+id/navigation_protal"
        android:name="com.almin.wandroid.ui.module.project.ProjectTabFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tab_project" />

    <fragment
        android:id="@+id/navigation_project"
        android:name="com.almin.wandroid.ui.module.portal.PortalTabFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_tab_portal" />


    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.almin.wandroid.ui.module.mine.MineTabFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_tab_mine" />
</navigation>